# winamp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml
crates/carapace/: Cargo.toml
crates/carapace-demo/: Cargo.toml
crates/carapace-demo/examples/: cut_headspace.rs  shoot.rs
crates/carapace-demo/examples/paper_mesh_spike/: extract.mjs  harness.rs  main.rs  transpile.rs
crates/carapace-demo/examples/paper_mesh_spike/shaders/: mesh_gradient.frag  vertex.vert
crates/carapace-demo/skins/classic/: skin.lua  skin.toml
crates/carapace-demo/skins/frame/: skin.lua  skin.toml
crates/carapace-demo/skins/minimal/: skin.lua  skin.toml
crates/carapace-demo/skins/reference/: skin.lua  skin.toml
crates/carapace-demo/skins/reference/assets/audio/: .gitignore  LICENSE
crates/carapace-demo/skins/shaderdemo/: skin.lua  skin.toml
crates/carapace-demo/skins/shaderdemo/assets/: bg.wgsl
crates/carapace-demo/skins/sysmon/: skin.lua  skin.toml
crates/carapace-demo/skins/transport/: skin.lua  skin.toml
crates/carapace-demo/src/: audio.rs  demo_host.rs  file_browser_host.rs  gauge.rs  lib.rs  main.rs  music_player_host.rs  sysmon_host.rs  transport.rs  window.rs
crates/carapace-demo/tests/: host_switch.rs  skins_build.rs
crates/carapace-ffi/: Cargo.toml  cbindgen.toml
crates/carapace-ffi/include/: carapace.h
crates/carapace-ffi/src/: crossfade.rs  guard.rs  handle.rs  hit.rs  host.rs  lib.rs  queue.rs  render.rs  render_thread.rs  snapshot.rs
crates/carapace-ffi/tests/: header.rs
crates/carapace-ffi/tests/skins/cut/: skin.lua  skin.toml
crates/carapace-ffi/tests/skins/hostview/: skin.lua  skin.toml
crates/carapace-ffi/tests/skins/twocutout/: skin.lua  skin.toml
crates/carapace-preview/: Cargo.toml  README.md
crates/carapace-preview/assets/: index.html
crates/carapace-preview/src/: inspector.rs  main.rs  preview_host.rs  protocol.rs  provenance.rs  render.rs  server.rs  skin_session.rs
crates/carapace/benches/: engine.rs
crates/carapace/src/: asset.rs  command.rs  composite.wgsl  engine.rs  fixture.rs  host.rs  layout.rs  lib.rs  render.rs  scene.rs  script.rs  shader.rs  shader_prelude.wgsl  shape.rs  skin.rs  state.rs  swap.rs  vocab.rs
crates/carapace/tests/: anchors_build.rs  behavior_snapshots.rs  engine_layout.rs  frame_loop.rs  frame_prim.rs  host_extension.rs  image_skin.rs  invariants.rs  layout.rs  list_layout.rs  manifest_resizable.rs  render_offscreen.rs  scrub_seek.rs  shader_spike.rs
crates/carapace/tests/skins/ok/: skin.lua  skin.toml
crates/carapace/tests/snapshots/: behavior_snapshots__click_then_tick.snap  behavior_snapshots__failed_swap_keeps_scene.snap  behavior_snapshots__swap_preserves_state.snap  behavior_snapshots__switch_host_resets.snap
crates/embed-spike/: Cargo.toml  carapace.h
crates/embed-spike/examples/: door_check.rs  iosurface_png.rs  live_clock.rs  render_png.rs  seed_states.rs
crates/embed-spike/flutter-sample/: .gitignore  .metadata  README.md  pubspec.yaml
crates/embed-spike/flutter-sample/ios/: wire_carapace.rb
crates/embed-spike/flutter-sample/ios/Runner/: AppDelegate.swift  CarapaceBridge.swift  Info.plist  Runner-Bridging-Header.h
crates/embed-spike/flutter-sample/ios/Runner.xcodeproj/: project.pbxproj
crates/embed-spike/flutter-sample/lib/: main.dart
crates/embed-spike/flutter-sample/test/: widget_test.dart
crates/embed-spike/macos-sample/: .gitignore  Package.swift  README.md
crates/embed-spike/macos-sample/Sources/CCarapace/: module.modulemap  shim.c
crates/embed-spike/macos-sample/Sources/CCarapace/include/: carapace.h  module.modulemap
crates/embed-spike/macos-sample/Sources/EmbedSpike/: main.swift
crates/embed-spike/macos-sample/Sources/EmbedSpike/Resources/: sample.m4a
crates/embed-spike/shaders/paper/: dithering.wgsl  mesh_gradient.wgsl  neuroNoise.wgsl  swirl.wgsl  vertex.wgsl  waves.wgsl
crates/embed-spike/skin/: main.lua  skin.toml
crates/embed-spike/skin-clock/: skin.lua  skin.toml
crates/embed-spike/skin-frame/: skin.lua  skin.toml
crates/embed-spike/skin-headspace/: skin.lua  skin.toml
crates/embed-spike/skin-nowplaying/: skin.lua  skin.toml
crates/embed-spike/skin-paper-surround/: skin.lua  skin.toml
crates/embed-spike/src/: host.rs  lib.rs  oneshot.rs  paper_view.rs  render.rs
crates/embed-spike/tests/: render_png.rs  skin_loads.rs
crates/embed-spike/widget-sample/: .gitignore  README.md  project.rb
crates/embed-spike/widget-sample/App/: Bridging-Header.h  CarapaceBridge.swift  CarapaceWidgetSpikeApp.swift  ContentView.swift
crates/embed-spike/widget-sample/Shared/: AppGroup.swift
crates/embed-spike/widget-sample/Widget/: BumpIntent.swift  CarapaceWidget.swift  CarapaceWidgetExtension.entitlements
crates/hittest/: Cargo.toml
crates/hittest/src/: lib.rs
crates/proto/: Cargo.toml
crates/proto/skins/media-classic/: skin.lua  skin.toml
crates/proto/skins/media-minimal/: skin.lua  skin.toml
crates/proto/skins/sysmon-bars/: skin.lua  skin.toml
crates/proto/skins/sysmon-dial/: skin.lua  skin.toml
crates/proto/src/: app.rs  host.rs  lib.rs  lua_bridge.rs  main.rs  render.rs  scene.rs  skin.rs  swap.rs
crates/proto/tests/: render_smoke.rs
crates/spike-render/: Cargo.toml
crates/spike-render/examples/: viewer.rs
crates/spike-render/src/: lib.rs  tiny_skia_backend.rs  vello_backend.rs  wgpu_backend.rs
crates/spike-render/tests/: all_backends.rs  parity_tiny_skia.rs  parity_vello.rs  parity_wgpu.rs
crates/window-spike/: Cargo.toml
crates/window-spike/src/: main.rs
docs/: book.toml
docs/api/: README.md  SUMMARY.md  engine-api.md  ffi-c-abi.md  getting-started.md  preview-tool.md  skin-authoring.md
docs/superpowers/plans/: 2026-06-17-phase0-render-hittest-spike.md  2026-06-17-phase1-prototype.md  2026-06-17-phase3a-headless-core.md  2026-06-18-ci-and-regression-harness.md  2026-06-18-phase3b-render-and-host.md  2026-06-18-phase5a-asset-loading.md  (+34 more)
showcase/: Package.swift  README.md
spikes/native-sdk-host/: FINDINGS.md  app.zon  build.zig
weather/: Package.swift
(+117 files in other folders)
