[package]
name = "carapace-demo"
version = "0.0.0"
edition = "2024"

[dependencies]
carapace = { path = "../carapace" }
winit = "0.30.13"
wgpu = "29.0.3"
pollster = "0.4.0"
sysinfo = "0.39.5"
rodio = "0.22.2"

[[bin]]
name = "carapace-demo"
path = "src/main.rs"

[[example]]
name = "paper_mesh_spike"
path = "examples/paper_mesh_spike/main.rs"

[dev-dependencies]
image = { version = "0.25.10", default-features = false, features = ["png"] }
naga = { version = "29", features = ["glsl-in", "wgsl-out", "spv-in"] }
