[package]
name = "carapace"
version = "0.0.0"
edition = "2024"

[dependencies]
hittest = { path = "../hittest" }
mlua = { version = "0.11.6", features = ["lua54", "vendored"] }
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
insta = "1.48.0"
proptest = "1.11.0"
