[package]
name = "carapace"
version = "0.0.0"
edition = "2024"

[features]
gpu-tests = []

[dependencies]
hittest = { path = "../hittest" }
mlua = { version = "0.11.6", features = ["lua54", "vendored"] }
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
vello = "0.9.0"
wgpu = "29.0.3"

[dev-dependencies]
insta = "1.48.0"
proptest = "1.11.0"
pollster = "0.4.0"
