[package]
name = "embed-spike"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]   # cdylib for Swift to link; rlib so tests/examples can use it

[dependencies]
carapace = { path = "../carapace" }
core-foundation = "0.10.1"
io-surface = "0.16.1"
libc = "0.2.186"
objc2 = "0.6"
objc2-io-surface = "0.3.2"
# `objc2-io-surface` feature gates MTLDevice::newTextureWithDescriptor:iosurface:plane:
objc2-metal = { version = "0.3.2", features = ["objc2-io-surface"] }
pollster = "0.4.0"
wgpu = "29.0.3"
wgpu-hal = "=29.0.3"

[dev-dependencies]
carapace = { path = "../carapace" }
image = "0.24"
