[package]
name = "embed-spike"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]   # +staticlib: iOS links a static archive

[dependencies]
carapace = { path = "../carapace" }
libc = "0.2.186"
pollster = "0.4.0"
wgpu = "29.0.3"
wgpu-hal = "=29.0.3"
image = { version = "0.24", default-features = false, features = ["png"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
io-surface = "0.16.1"
objc2 = "0.6"
objc2-io-surface = "0.3.2"
# `objc2-io-surface` feature gates MTLDevice::newTextureWithDescriptor:iosurface:plane:
objc2-metal = { version = "0.3.2", features = ["objc2-io-surface"] }

[dev-dependencies]
carapace = { path = "../carapace" }
