[package]
name = "embed-spike"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]   # +staticlib: iOS links a static archive

[dependencies]
carapace = { path = "../carapace" }
libc = "0.2.186"
pollster = "0.4.0"
wgpu = "29.0.3"
wgpu-hal = "=29.0.3"
image = { version = "0.24", default-features = false, features = ["png"] }
naga = { version = "29", features = ["wgsl-in"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-foundation = "0.10.1"
objc2 = "0.6"
objc2-io-surface = "0.3.2"
# `objc2-io-surface` feature gates MTLDevice::newTextureWithDescriptor:iosurface:plane:
objc2-metal = { version = "0.3.2", features = ["objc2-io-surface"] }

# macOS-ONLY: only the `iosurface_png` example uses `io-surface` (to CREATE an IOSurface in Rust).
# It transitively links the macOS-only OpenGL framework (via `cgl`), so it must never be an iOS
# dependency — the library itself calls IOSurface.framework directly (see render.rs).
[target.'cfg(target_os = "macos")'.dependencies]
io-surface = "0.16.1"

[dev-dependencies]
carapace = { path = "../carapace" }
